--- a/index.css
+++ b/index.css
@@ -123,5 +123,21 @@ body {
   margin: 3px 0 10px;
 }
 
+.card .expand{
+  display: none;
+}
+
+.card .expandButton {
+  margin-top: 3rem;
+  bottom: 0;
+  left: 50%;
+  font-size: 12px;
+  color: turquoise;
+  cursor: pointer;
+  transform: translate(-50%);
+  background-color: white;
+}
+
+
 
 
